Move maple.js from dist/runtime to dist root folder

--- a/demo/index.html
+++ b/demo/index.html
@@ -16,7 +16,7 @@
       }
     </style>
 
-    <script src="../dist/runtime/maple.runtime.js?sm=480px&md=640px&yy=500px"></script>
+    <script src="../dist/maple.js?sm=480px&md=640px&yy=500px"></script>
   </head>
 
   <body>
